src/objects/TDR_Weekly_Target__c.object
<CustomObject>
    <fields>
        <fullName>Active_DSTs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active DSTs</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Active_Internet_Cafes__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Active Internet Cafes</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Banked_Agents__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Banked Agents</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Card Sales</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Easytalk_Activations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Easytalk Activations</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Easytalk_Installations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Easytalk Installations</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Easytalk_New_Locations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Easytalk New Locations</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Easytalk_Repairs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Easytalk Repairs</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MM_Sub_Acquisitions__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MM Sub Acquisitions</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mobile_Money_Activations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Mobile Money Activations</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Agents__c</fullName>
        <defaultValue>0</defaultValue>
        <label>New Agents</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payphone_Repairs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Payphone Repairs</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Simcard_Registrations__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Simcard Registrations</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>TDR Weekly Target</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WT{0000}</displayFormat>
        <label>TDR Weekly Target Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TDR Weekly Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>